# django-smartbase-admin

./: .coverage  .eslintignore  .eslintrc.js  .gitignore  .pre-commit-config.yaml  ACTION_URL_MIGRATION.md  AGENTS.md  CONTRIBUTING.md  LICENSE.md  README.md  gulpfile.js  package.json  pyproject.toml  requirements.txt  runtests.py
.github/workflows/: tests.yml  workflow.yml
docs/: agents.md
src/django_smartbase_admin/: apps.py  checks.py  compilemessages.py  makemessages.py  models.py  querysets.py  settings.py  utils.py
src/django_smartbase_admin/actions/: admin_action_list.py  advanced_filters.py
src/django_smartbase_admin/admin/: admin_base.py  permission_widget.py  site.py  widgets.py
src/django_smartbase_admin/audit/: __init__.py  apps.py  manager.py  mcp.py  models.py  sb_admin.py  views.py
src/django_smartbase_admin/audit/migrations/: 0001_initial.py  0002_adminauditlog_source.py
src/django_smartbase_admin/audit/tests/: test_action_processing.py  test_audit_integration.py  test_audit_permissions.py  test_delegate_to_action.py  test_diff.py  test_fk_affected.py  test_modal_media.py
src/django_smartbase_admin/audit/utils/: diff.py  serialization.py
src/django_smartbase_admin/engine/: actions.py  admin_base_view.py  admin_entrypoint_view.py  admin_view.py  configuration.py  const.py  dashboard.py  dynamic_forms.py  fake_inline.py  field.py  field_formatter.py  filter_widgets.py  global_filter_form.py  inline_pagination.py  menu_item.py  modal_view.py  request.py
src/django_smartbase_admin/integration/: django_cms.py
src/django_smartbase_admin/locale/cs/LC_MESSAGES/: django.mo  django.po
src/django_smartbase_admin/locale/de/LC_MESSAGES/: django.mo  django.po
src/django_smartbase_admin/locale/en/LC_MESSAGES/: django.mo  django.po
src/django_smartbase_admin/locale/fr/LC_MESSAGES/: django.po
src/django_smartbase_admin/locale/hr/LC_MESSAGES/: django.po
src/django_smartbase_admin/locale/hu/LC_MESSAGES/: django.po
src/django_smartbase_admin/locale/it/LC_MESSAGES/: django.po
src/django_smartbase_admin/locale/pl/LC_MESSAGES/: django.po
src/django_smartbase_admin/locale/ro/LC_MESSAGES/: django.po
src/django_smartbase_admin/locale/sk/LC_MESSAGES/: django.mo  django.po
src/django_smartbase_admin/locale/sl/LC_MESSAGES/: django.po
src/django_smartbase_admin/mcp/: actions.py  apps.py  bridge.py  dashboard_blueprint.html  field_schema.py  form_encoding.py  html_sanitize.py  inlines.py  instructions.py  mcp.py  middleware.py  resolvers.py  rest.py  schema.py  service.py  signals.py  urls.py  widgets.py
src/django_smartbase_admin/mcp/oauth/: auth.py  urls.py  validators.py  views.py
src/django_smartbase_admin/mcp/tests/: _common.py  test_actions.py  test_aggregate.py  test_cors.py  test_cors_middleware.py  test_create_object.py  test_fake_inlines.py  test_fetch_action_form.py  test_fetch_add_form.py  test_fetch_detail.py  test_fetch_filter_preset.py  test_field_schema.py  test_filter_validation.py  test_form_encoding.py  test_inline_data.py  test_invoke_integration.py  test_list_admins.py  test_oauth_auth.py  test_oauth_redirect_loopback.py  test_permissions.py  test_pk_field.py  test_rest.py  test_smoke.py  test_update_detail.py  test_widget_encoding.py
src/django_smartbase_admin/mcp_log/: apps.py  dashboard.py  logger.py  models.py  recorder.py  sb_admin.py  services.py
src/django_smartbase_admin/mcp_log/migrations/: 0001_initial.py
src/django_smartbase_admin/messaging/: apps.py  config.py  forms.py  models.py  sb_admin.py  services.py
src/django_smartbase_admin/messaging/migrations/: 0001_initial.py  0002_alter_messageattachment_file.py
src/django_smartbase_admin/messaging/templatetags/: sb_admin_messaging_tags.py
src/django_smartbase_admin/messaging/tests/: test_attachment_upload.py  test_create_message.py  test_unread_badge.py
src/django_smartbase_admin/migrations/: 0001_initial.py  0002_auto_20230402_2316.py  0003_auto_20230402_2328.py  0004_alter_sbadminlistviewconfiguration_action_and_more.py  0005_sbadminuserconfiguration.py  0006_alter_sbadminuserconfiguration_color_scheme.py
src/django_smartbase_admin/monkeypatch/: admin_readonly_field_monkeypatch.py  fake_inline_monkeypatch.py
src/django_smartbase_admin/plugins/: base.py  nested.py
src/django_smartbase_admin/plugins/tests/: test_nested.py
src/django_smartbase_admin/services/: configuration.py  data.py  request_cache.py  thread_local.py  translations.py  url_params_codec.py  views.py  xlsx_export.py
src/django_smartbase_admin/templates/sb_admin/: blank_base.html  fonts.html  navigation.html  sb_admin_base.html  sb_admin_base_no_sidebar.html  sb_admin_js_trans.html  submit_line.html  tailwind_whitelist.html
src/django_smartbase_admin/templatetags/: base.py  sb_admin_tags.py  sb_paginated_inline.py
src/django_smartbase_admin/tests/: test_autocomplete_forward_create.py  test_checks.py  test_copyable_widget.py  test_dashboard.py  test_dynamic_forms.py  test_filter_widgets.py  test_generic_relation_parent.py  test_inline_pagination.py  test_inline_table_field_rendering.py  test_permission_widget.py  test_request_cache.py  test_translation_widgets.py  test_url_params_codec.py  test_view_on_site.py
src/django_smartbase_admin/views/: dashboard_view.py  global_filter_view.py  media_view.py  sbadmin_wizard_step.py  sbadmin_wizard_view.py  translations_view.py  user_config_view.py  view_on_site_from_list_view.py  view_on_site_redirect_view.py
tests/: mcp_urls.py  sbadmin_config.py  settings.py  test_menu_item.py
(+256 files in other folders)
