[tool.poetry]
name = "django-smartbase-admin"
version = "1.0.21"
description = ""
authors = ["SmartBase <info@smartbase.sk>"]
readme = "README.md"
license = "MIT"
homepage = "https://smartbase-sk.github.io/django-smartbase-admin-docs/"
repository = "https://github.com/SmartBase-SK/django-smartbase-admin"
include = [
    "**/static/sb_admin/dist/**/*"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[tool.poetry.dependencies]
python = "^3.10"
django = ">= 4.1, < 6.0"
django-ckeditor = "^6.7.1"
django-admin-inline-paginator = "^0.4.0"
django-nested-admin = "^4.1.1"
xlsxwriter = "^3.2.0"
django-widget-tweaks = "^1.5.0"
django-filer = "^3.1.1"
easy-thumbnails = {extras = ["svg"], version = "^2.8.5"}
django-htmx = "^1.17.3"
# required for django-filer
setuptools = "^67.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
force_exclude = '''
/(
  | migrations
)/

'''

