[tool.poetry]
name = "django-smartbase-admin"
version = "1.1.8"
description = ""
authors = ["SmartBase <info@smartbase.sk>"]
readme = "README.md"
license = "MIT"
homepage = "https://smartbase-sk.github.io/django-smartbase-admin-docs/"
repository = "https://github.com/SmartBase-SK/django-smartbase-admin"
include = [
    "**/static/sb_admin/dist/**/*",
    "**/static/sb_admin/js/wizard_formset.js",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[tool.poetry.dependencies]
python = "^3.10"
django = ">= 4.1, < 7.0"
django-ckeditor = "^6.7.1"
django-admin-inline-paginator = "^0.4.0"
django-nested-admin = "^4.1.1"
xlsxwriter = "^3.2.0"
django-widget-tweaks = "^1.5.0"
django-filer = "^3.1.1"
easy-thumbnails = {extras = ["svg"], version = "^2.8.5"}
django-htmx = "^1.17.3"
# required for django-filer
setuptools = "^67.0.0"

[tool.poetry.group.dev.dependencies]
# No extra test packages needed — tests use unittest and Django's built-in
# test runner. This group exists so `poetry install --with dev` is explicit.

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
force_exclude = '''
/(
  | migrations
)/

'''

