[tool.poetry]
name = "django-smartbase-admin"
version = "2.0.17b2"
description = ""
authors = ["SmartBase <info@smartbase.sk>"]
readme = "README.md"
license = "MIT"
homepage = "https://smartbase-sk.github.io/django-smartbase-admin-docs/"
repository = "https://github.com/SmartBase-SK/django-smartbase-admin"
include = [
    "**/static/sb_admin/dist/**/*",
    "**/mcp/dashboard_blueprint.html",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[tool.poetry.dependencies]
python = "^3.10"
django = ">= 4.2, < 7.0"
django-ckeditor = "^6.7.1"
django-nested-admin = "^4.1.1"
xlsxwriter = "^3.2.0"
django-widget-tweaks = "^1.5.0"
django-filer = "^3.1.1"
easy-thumbnails = {extras = ["svg"], version = "^2.8.5"}
django-htmx = "^1.17.3"
# JSON Schema validation server-side for SBAdminJsonEditorField
jsonschema = "^4.10"
lzstring = "^1.0.4"
# required for django-filer
setuptools = "^67.0.0"
# Optional MCP dependencies: only required when wiring the MCP toolset
# (``django_smartbase_admin.mcp``). Users who don't enable MCP can skip
# them entirely.
django-oauth-toolkit = {version = "^3.2", optional = true}
djangorestframework = {version = "^3.17", optional = true}
django-mcp-server = {version = "^0.5.7", optional = true}
# Allowlist HTML sanitizer for ``fetch_detail`` display values.
nh3 = {version = ">=0.2.15", optional = true}

[tool.poetry.extras]
mcp = ["django-oauth-toolkit", "djangorestframework", "django-mcp-server", "nh3"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
force_exclude = '''
/(
  | migrations
)/

'''

